--- a/index.html
+++ b/index.html
@@ -3,45 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Two-Shade Gradient with Blur</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(120deg, #1e90ff, #ff7f50); /* Two-shade gradient */
-    }
-
-    .blur-container {
-      width: 300px;
-      height: 200px;
-      background: rgba(255, 255, 255, 0.2); /* Semi-transparent for blur */
-      backdrop-filter: blur(10px); /* Apply blur effect */
-      -webkit-backdrop-filter: blur(10px); /* Safari support */
-      border: 1px solid rgba(255, 255, 255, 0.5);
-      border-radius: 15px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-      font-size: 20px;
-      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
-    }
-  </style>
-</head>
-<body>
-  <div class="blur-container">
-    <button ></button>
-  </div>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Two-Shade Gradient with Blur and Case Converter</title>
   <style>
     body {
@@ -50,15 +11,15 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(120deg, #1e90ff, #ff7f50); /* Two-shade gradient */
+      background: linear-gradient(120deg, #1e90ff, #f7a8f7); /* Two-shade gradient */
     }
 
     .blur-container {
       width: 350px;
       padding: 20px;
-      background: rgba(255, 255, 255, 0.2); /* Semi-transparent for blur */
-      backdrop-filter: blur(10px); /* Apply blur effect */
-      -webkit-backdrop-filter: blur(10px); /* Safari support */
+      background: rgba(255, 255, 255, 0.2); 
+      backdrop-filter: blur(10px); 
+      -webkit-backdrop-filter: blur(10px); 
       border: 1px solid rgba(255, 255, 255, 0.5);
       border-radius: 15px;
       display: flex;
@@ -82,12 +43,13 @@
     button {
       margin: 5px;
       padding: 10px 20px;
-      background: #ff7f50;
+      background: #555447;
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
       transition: background 0.3s;
+      border: 1px solid black;
     }
 
     button:hover {
@@ -96,23 +58,23 @@
 
     .output {
       margin-top: 15px;
-      padding: 10px;
-      background: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.6); /* Darker background for better visibility */
       border-radius: 5px;
       text-align: center;
       width: 100%;
       font-size: 16px;
+      color: #ff7f50; /* Bright text color */
+      word-wrap: break-word; /* Ensures text stays within the box */
     }
   </style>
 </head>
 <body>
   <div class="blur-container">
     <input id="textInput" type="text" placeholder="Type your text here..." />
-    <div>
-      <button onclick="convertToPascal()">Pascal Case</button>
-      <button onclick="convertToSnake()">Snake Case</button>
-      <button onclick="convertToUpper()">Upper Case</button>
-    </div>
+    <button onclick="convertToPascal()">Pascal Case</button>
+    <button onclick="convertToSnake()">Snake Case</button>
+    <button onclick="convertToUpper()">Upper Case</button>
     <div class="output" id="output">Converted text will appear here</div>
   </div>
 
@@ -120,7 +82,7 @@
     function convertToPascal() {
       const input = document.getElementById('textInput').value;
       const result = input
-        .split(/[\s_]+/) // Split by spaces or underscores
+        .split(/[\s_]+/)
         .map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase())
         .join('');
       document.getElementById('output').textContent = result || 'No text entered';
@@ -130,7 +92,7 @@
       const input = document.getElementById('textInput').value;
       const result = input
         .toLowerCase()
-        .replace(/[\s]+/g, '_'); // Replace spaces with underscores
+        .replace(/[\s]+/g, '_'); 
       document.getElementById('output').textContent = result || 'No text entered';
     }
 
